--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -77,6 +77,9 @@ jobs:
           key: hugo-${{ github.run_id }}
           restore-keys:
             hugo-
+      - name: First run of hugo 
+        run: |
+          hugo 
       - name: Build the site
         run: |
           hugo \
